; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/qedit/extr_mediadet.c_init_tests.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/qedit/extr_mediadet.c_init_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TEST_AVI_RES = common dso_local global i32 0, align 4
@test_avi_filename = common dso_local global i32 0, align 4
@TEST_SOUND_AVI_RES = common dso_local global i32 0, align 4
@test_sound_avi_filename = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @init_tests to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_tests() #0 {
  %1 = load i32, i32* @TEST_AVI_RES, align 4
  %2 = load i32, i32* @test_avi_filename, align 4
  %3 = call i64 @unpack_avi_file(i32 %1, i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load i32, i32* @TEST_SOUND_AVI_RES, align 4
  %7 = load i32, i32* @test_sound_avi_filename, align 4
  %8 = call i64 @unpack_avi_file(i32 %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br label %10

10:                                               ; preds = %5, %0
  %11 = phi i1 [ false, %0 ], [ %9, %5 ]
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i64 @unpack_avi_file(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
